Add Discord link to brand line in footer

--- a/index.html
+++ b/index.html
@@ -315,7 +315,8 @@
             <div class="brand-line">
                 Made by <strong><a href="https://github.com/Qetrox" target="_blank"
                         rel="noopener noreferrer">Qetrox</a></strong> • Powered by <a href="https://winstreak.ws"
-                    target="_blank" rel="noopener noreferrer">Winstreak.ws</a>
+                    target="_blank" rel="noopener noreferrer">Winstreak.ws</a> • Join the 
+                <a href="https://discord.gg/4XDhgcthT7" target="_blank" rel="noopener noreferrer">Discord</a>
             </div>
             <div>
                 Not affiliated with Mojang, Microsoft, or any Minecraft server network.
