Add SEO and analytics meta tags to index.html
Added meta description, canonical link, Open Graph, and Twitter Card tags for improved SEO and social sharing. Integrated Google Analytics via gtag.js for site traffic tracking.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta charset="UTF-8" />
     <title>Whitelist Police</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="This is a friendly reminder to enable your Minecraft whitelist." />
+    <link rel="canonical" href="https://enablewhitel.ist/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Whitelist Police" />
+    <meta property="og:description" content="This is a friendly reminder to enable your Minecraft whitelist." />
+    <meta property="og:url" content="https://enablewhitel.ist/" />
+    <meta property="og:site_name" content="Whitelist Police" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Whitelist Police" />
+    <meta name="twitter:description" content="This is a friendly reminder to enable your Minecraft whitelist." />
     <style>
         :root {
             --bg: #ffffff;
@@ -263,6 +278,16 @@
     </style>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0EYQQC67P8"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0EYQQC67P8');
+</script>
+
 <body>
     <div class="page">
         <header>
@@ -315,7 +340,7 @@
             <div class="brand-line">
                 Made by <strong><a href="https://github.com/Qetrox" target="_blank"
                         rel="noopener noreferrer">Qetrox</a></strong> • Powered by <a href="https://winstreak.ws"
-                    target="_blank" rel="noopener noreferrer">Winstreak.ws</a> • Join the 
+                    target="_blank" rel="noopener noreferrer">Winstreak.ws</a> • Join the
                 <a href="https://discord.gg/4XDhgcthT7" target="_blank" rel="noopener noreferrer">Discord</a>
             </div>
             <div>
